tweak breakpoint to fix 1px gap in responsive style

--- a/assets/css/footer.less
+++ b/assets/css/footer.less
@@ -32,7 +32,7 @@
 
       a {
 
-        @media (min-width: @tabletMinWidth) and (max-width: @tabletMaxWidth){
+        @media (min-width: 769px) and (max-width: @tabletMaxWidth){
           background-size: 80%;
           font-size: 80%;
         }
